fix: overflow

--- a/portifolio/src/index.css
+++ b/portifolio/src/index.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Secular One', sans-serif;
-    overflow-x: hidden;
   }
   
   html, body, #root, .App {
